feat: update spark